Fix button alignment

--- a/gatsby-site/src/assets/scss/components/_projects.scss
+++ b/gatsby-site/src/assets/scss/components/_projects.scss
@@ -8,6 +8,9 @@
   list-style: none;
 
   .project {
+    @include vendor('display', 'flex');
+    @include vendor('justify-content', 'flex-start');
+    @include vendor('flex-direction', 'column');
     width: calc(#{(100% / 2)} - #{_size(element-margin)});
     margin-left: _size(element-margin);
     margin-top: (_size(element-margin));
@@ -41,6 +44,10 @@
     }
 
     footer {
+      @include vendor('flex', '1');
+      @include vendor('display', 'flex');
+      @include vendor('justify-content', 'flex-start');
+      @include vendor('flex-direction', 'column');
       padding: 1.2rem;
 
       p {
@@ -48,7 +55,9 @@
       }
 
       .links {
+        @include vendor('flex', '1');
         @include vendor('display', 'flex');
+        @include vendor('align-items', 'flex-end');
         @include vendor('justify-content', 'space-around');
       }
 
